  - Win32: minor optimization not submitting gamepad input if packet number has not
    changed (reworked previous 1.92.4). (#9202, #8556) [@AhmedSamyMousa, @MidTerm-CN]
- Examples:
   - Win32+DirectX12: ignore seemingly incorrect `D3D12_MESSAGE_ID_FENCE_ZERO_WAIT`
     warning on startups on some setups. (#9084, #9093) [@RT2Code, @LeoGautheron]

Docking+Viewports Branch:

- Docking:
  - Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
  - Demo: rework 'Dockspace' demo to increase clarity and put more emphasis on the
    basic path of simply calling `DockSpaceOverViewport()`.
- Viewports:
  - Fixed a regression in 1.92.4 which could cause combos/popups window from
    appearing under their parent viewport if their geometry overlapped the main
    viewport. (#8948, #9172, #9131, #9128)
  - Fixed an assert in background dimming code, which could trigger after using
    gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
- Backends:
  - GLFW: dynamically load X11 functions to avoid -lx11 linking requirement introduced
    in 1.92.3. (#9116, #9109) [@ramenguy99]
  - GLFW: improve workarounds for cases where GLFW is unable to provide reliable monitor 
    info. Preserve existing monitor list when none of the new one is valid. (#9195, #7902, #5683)
  - SDL2, SDL3: adjust IME offset to match other backends and master branch. (#6071, #1953)
  - Win32: viewports created by backend forcefully direct messages to
    DefWindowProcW() in order to support Unicode text input. (#9099, #3653, #5961) [@ulhc]
  - Win32: fixed an issue from 1.90.5 where newly appearing windows that are not parented
    to the main viewport didn't have their task bar icon appear before the window was
    explicitely refocused. (#7354, #8669)


-----------------------------------------------------------------------
 VERSION 1.92.5 (Released 2025-11-20)
-----------------------------------------------------------------------
